<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rachel.myfirstapp.Logger_Display">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Stat_Mod_Spinner"
            android:layout_gravity="center_horizontal|top"
            android:spinnerMode="dropdown" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Char_Name_Field"
            android:hint="@string/enter_players_name"
            android:textAlignment="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/Stat_Mod_Magnitude_Field"
            android:layout_gravity="center_horizontal|top"
            android:hint="@string/enter_effect"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_mod"
            android:id="@+id/Execute_Mod_Btn"
            android:layout_gravity="center" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Log_View"
            android:layout_gravity="center_horizontal|bottom"
            android:choiceMode="none"
            android:stackFromBottom="true" />
    </LinearLayout>

</FrameLayout>
